--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.344.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-medium-image-zoom": "^5.2.14"
+    "react-medium-image-zoom": "^5.2.14",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
