--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.6.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.344.0",
     "qrcode.react": "^4.2.0",
